--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
     "sweetalert2": "^11.26.10",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
