--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-router": "^7.10.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
